working on alignment fixed z-index

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,88 @@
 .App {
-  text-align: center;
-  background-image: url("/assets/background.png");
-  background-size: cover;
+  background-image: url("/src/assets/background.png");
+  background-size: contain;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+
+}
+.toprow{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: 20em;
+  width: auto;
+}
+.miffy{
+  display: flex;
+  height: 100%;
+  width: auto;
+  height: auto;
+  justify-content: right;
+}
+.photoboothtext{
+  justify-content: center;
+  width: auto;
+  height: 100%;
+  padding: -5px;
 }
 
 
+.photostrip{
+  width:15%;
+  margin-top: 2em;
+}
+.camframe{
+  width: 60%;
+  position: relative;
+  display: flex;
+  text-align: left;
+}
+.midsection{
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+.webcam{
+  position: absolute;
+  z-index: 4;
+    vertical-align: middle;
 
-.webcamholder{
-  position: relative; top: 529px; left: 550px;
+  text-align: center;
+  transform: translate(40%, 25%);
+  width: 60%;
+}
+.photoframe{
+  width: 100%;
+  z-index: 1;
+  position: absolute;
+  vertical-align: middle;
+}
+.startbutton{
+  position: absolute;
+  bottom: 10px;    
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px 20px;
+  cursor: pointer;
+  z-index: 5;      
+  font-size: 16px;
+}
+.photo-strip{
+  display: flex;
+  flex-direction: column;
+}
+.photo-slot{
+  width: 5%;
+}
+.photo-strip{
+  display: flex;
+  direction: column;
+  gap: 11%;
+  right: -20px;
+  width: 15%;
+}
+.photobooth{
+  display: flex;
+  flex-direction: row;
 }
